--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/node-sass": "^4.11.1",
@@ -19,6 +20,7 @@
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.15.2",
     "axios": "^0.21.1",
+    "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
